--- a/quiz1.html
+++ b/quiz1.html
@@ -29,8 +29,7 @@
                 <p>Hint: View source code </p>
 
                 <div class="heading-secondary">
-                    He Is The Biggest Criminal…He Is The Biggest Businessman…
-                    This Is The Biggest National Issue!
+                    All time highest scorer in NBA
                 </div>
 
                 <div class="center">
