--- a/signup.html
+++ b/signup.html
@@ -9,15 +9,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
   <link rel="stylesheet" href="/css/signup.css">
 </head>
-<body>
-  <div class="container" >
-    <h1 class="brand"><span>SIGN</span> UP</h1>
-    <div class="wrapper">
-      <div class="company-info">
+<body style="background-color: lightblue;">
+  <div class="container"style="background-color: lightblue;" >
+    <h1  style="text-align:center;background-color: lightblue;"><span>SIGN</span> UP</h1>
+    <div class="wrapper" style="background-color: lightblue;">
+      <div class="company-info" style="background-color: lightblue;">
        
        
       </div>
-      <div class="contact">
+      <div class="contact" style="background-color: lightblue;">
         <h3>Email Us</h3>
         <div class="alert">Account successfully created. Move to login page to login</div>
         <form id="contactForm">
@@ -34,10 +34,12 @@
             <input type="password" name="phone" id="password">
           </p>
           <p class="full">
-            <button type="submit">SIGN UP</button>
+            <button type="submit" style="background-color: rgb(129, 179, 212);">SIGN UP</button>
           </p>
         </form>
         <p class="full">
+          <br>
+          Already have an account?<br>
             <a href="#">Login</a>
         </p>
       </div>
